Re-fixed bug in getNearestComponents (previously it was fixed but some tests had either wrong asserts or exceptions)